--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 	<body>
 	    There there.
-	    <img src="iamge.jpg" height="100" width="100">
+	    <img src="image.jpg" height="100" width="100">
 	</body>
 </html>
